cmake_minimum_required(VERSION 3.26)
project(umd)

set(CMAKE_CXX_STANDARD 17)

include_directories(apps/compiler)
include_directories(apps/runtime)
include_directories(core/include)
include_directories(core/include/nvdla)
include_directories(core/include/nvdla/c)
include_directories(core/include/nvdla/caffe)
include_directories(core/include/nvdla/caffe/c)
include_directories(core/src/common/include)
include_directories(core/src/common/include/priv)
include_directories(core/src/common/include/priv/emu)
include_directories(core/src/common/include/priv/emu/emu1)
include_directories(core/src/common/include/priv/emu/emu1/A)
include_directories(core/src/compiler/caffe/ditcaffe/protobuf-2.6.1)
include_directories(core/src/compiler/caffe/ditcaffe/protobuf-3.0.0)
include_directories(core/src/compiler/caffe/ditcaffe/protobuf-lite-2.6.1)
include_directories(core/src/compiler/caffe/ditcaffe/protobuf-lite-3.0.0)
include_directories(core/src/compiler/include)
include_directories(core/src/compiler/include/priv)
include_directories(core/src/compiler/include/priv/caffe)
include_directories(core/src/compiler/include/priv/dla)
include_directories(core/src/compiler/include/priv/dla/dla1)
include_directories(core/src/compiler/include/priv/dla/dla1/A)
include_directories(core/src/runtime/include)
include_directories(core/src/runtime/include/priv)
include_directories(external/include)
include_directories(external/include/flatbuffers)
include_directories(external/include/rapidjson)
include_directories(external/include/rapidjson/error)
include_directories(external/include/rapidjson/internal)
include_directories(external/include/rapidjson/msinttypes)
include_directories(external/protobuf-2.6/android)
include_directories(external/protobuf-2.6/gtest/fused-src/gtest)
include_directories(external/protobuf-2.6/gtest/include)
include_directories(external/protobuf-2.6/gtest/include/gtest)
include_directories(external/protobuf-2.6/gtest/include/gtest/internal)
include_directories(external/protobuf-2.6/gtest/samples)
include_directories(external/protobuf-2.6/gtest/src)
include_directories(external/protobuf-2.6/gtest/test)
include_directories(external/protobuf-2.6/gtest/xcode/Samples/FrameworkSample)
include_directories(external/protobuf-2.6/python/google/protobuf/pyext)
include_directories(external/protobuf-2.6/src/google/protobuf)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler/cpp)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler/java)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler/javamicro)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler/javanano)
include_directories(external/protobuf-2.6/src/google/protobuf/compiler/python)
include_directories(external/protobuf-2.6/src/google/protobuf/io)
include_directories(external/protobuf-2.6/src/google/protobuf/stubs)
include_directories(external/protobuf-2.6/src/google/protobuf/testing)
include_directories(port/linux/include)

add_executable(umd
        apps/compiler/CompileTest.cpp
        apps/compiler/GenerateTest.cpp
        apps/compiler/main.cpp
        apps/compiler/main.h
        apps/compiler/ParseTest.cpp
        apps/runtime/DlaImage.cpp
        apps/runtime/DlaImage.h
        apps/runtime/DlaImageUtils.cpp
        apps/runtime/DlaImageUtils.h
        apps/runtime/main.cpp
        apps/runtime/main.h
        apps/runtime/RuntimeTest.cpp
        apps/runtime/RuntimeTest.h
        apps/runtime/Server.cpp
        apps/runtime/Server.h
        apps/runtime/TestUtils.cpp
        core/include/nvdla/c/NvDlaLoadable.h
        core/include/nvdla/c/NvDlaType.h
        core/include/nvdla/caffe/c/NvDlaCaffeParser.h
        core/include/nvdla/caffe/ICaffeParser.h
        core/include/nvdla/ICompiler.h
        core/include/nvdla/ILayer.h
        core/include/nvdla/ILoadable.h
        core/include/nvdla/INetwork.h
        core/include/nvdla/IProfile.h
        core/include/nvdla/IProfiler.h
        core/include/nvdla/IRuntime.h
        core/include/nvdla/ISetup.h
        core/include/nvdla/ITargetConfig.h
        core/include/nvdla/ITensor.h
        core/include/nvdla/IType.h
        core/include/nvdla/IWisdom.h
        core/include/nvdla/IWisdomContainer.h
        core/include/BitBinaryTree.h
        core/include/BuddyAlloc.h
        core/include/dlaerror.h
        core/include/DlaImage.h
        core/include/DlaImageUtils.h
        core/include/dlatypes.h
        core/include/ErrorMacros.h
        core/include/nvdla_inf.h
        core/include/nvdla_os_inf.h
        core/src/common/include/priv/emu/emu1/A/emu_interface.h
        core/src/common/include/priv/emu/emu1/A/emu_version.h
        core/src/common/include/priv/Check.h
        core/src/common/include/priv/EMUInterface.h
        core/src/common/include/priv/EMUInterfaceEnums.h
        core/src/common/include/priv/Loadable.h
        core/src/common/include/priv/loadable_generated.h
        core/src/common/include/priv/Type.h
        core/src/common/Check.cpp
        core/src/common/EMUInterface.cpp
        core/src/common/EMUInterfaceA.cpp
        core/src/common/ErrorLogging.c
        core/src/common/Loadable.cpp
        core/src/compiler/caffe/c/NvDlaCaffeParser.cpp
        core/src/compiler/caffe/ditcaffe/protobuf-2.6.1/ditcaffe.pb.cpp
        core/src/compiler/caffe/ditcaffe/protobuf-2.6.1/ditcaffe.pb.h
        core/src/compiler/caffe/ditcaffe/protobuf-3.0.0/ditcaffe.pb.cpp
        core/src/compiler/caffe/ditcaffe/protobuf-3.0.0/ditcaffe.pb.h
        core/src/compiler/caffe/ditcaffe/protobuf-lite-2.6.1/ditcaffe.opt-for-lite.pb.cpp
        core/src/compiler/caffe/ditcaffe/protobuf-lite-2.6.1/ditcaffe.opt-for-lite.pb.h
        core/src/compiler/caffe/ditcaffe/protobuf-lite-3.0.0/ditcaffe.opt-for-lite.pb.cpp
        core/src/compiler/caffe/ditcaffe/protobuf-lite-3.0.0/ditcaffe.opt-for-lite.pb.h
        core/src/compiler/caffe/CaffeParser.cpp
        core/src/compiler/engine-ast/ActivationOp.cpp
        core/src/compiler/engine-ast/BatchNormOp.cpp
        core/src/compiler/engine-ast/BDMAGroupOp.cpp
        core/src/compiler/engine-ast/BDMANode.cpp
        core/src/compiler/engine-ast/BDMASingleOp.cpp
        core/src/compiler/engine-ast/BiasOp.cpp
        core/src/compiler/engine-ast/CDPLRNOp.cpp
        core/src/compiler/engine-ast/CDPNode.cpp
        core/src/compiler/engine-ast/ConcatOp.cpp
        core/src/compiler/engine-ast/ConvCoreNode.cpp
        core/src/compiler/engine-ast/ConvolutionOp.cpp
        core/src/compiler/engine-ast/CPUNode.cpp
        core/src/compiler/engine-ast/DeconvolutionOp.cpp
        core/src/compiler/engine-ast/EngineAST.cpp
        core/src/compiler/engine-ast/EngineEdge.cpp
        core/src/compiler/engine-ast/EngineGraph.cpp
        core/src/compiler/engine-ast/EngineNode.cpp
        core/src/compiler/engine-ast/EngineNodeFactory.cpp
        core/src/compiler/engine-ast/FullyConnectedOp.cpp
        core/src/compiler/engine-ast/MultiOpsNode.cpp
        core/src/compiler/engine-ast/NestedGraph.cpp
        core/src/compiler/engine-ast/PDPNode.cpp
        core/src/compiler/engine-ast/RubikNode.cpp
        core/src/compiler/engine-ast/ScaleOp.cpp
        core/src/compiler/engine-ast/SDPEltWiseOp.cpp
        core/src/compiler/engine-ast/SDPNode.cpp
        core/src/compiler/engine-ast/SDPNOP.cpp
        core/src/compiler/engine-ast/SDPSuperOp.cpp
        core/src/compiler/engine-ast/SoftMaxOp.cpp
        core/src/compiler/engine-ast/SplitOp.cpp
        core/src/compiler/include/priv/caffe/CaffeParser.h
        core/src/compiler/include/priv/dla/dla1/A/dla_fw_version.h
        core/src/compiler/include/priv/dla/dla1/A/dla_interface.h
        core/src/compiler/include/priv/AST.h
        core/src/compiler/include/priv/ASTEnums.h
        core/src/compiler/include/priv/CanonicalAST.h
        core/src/compiler/include/priv/CanonicalEnums.h
        core/src/compiler/include/priv/Check.h
        core/src/compiler/include/priv/Compiler.h
        core/src/compiler/include/priv/DLAInterface.h
        core/src/compiler/include/priv/DlaPrototestInterface.pb.h
        core/src/compiler/include/priv/DLAResourceManager.h
        core/src/compiler/include/priv/EngineAST.h
        core/src/compiler/include/priv/EngineASTEnums.h
        core/src/compiler/include/priv/Layer.h
        core/src/compiler/include/priv/LowPrecision.h
        core/src/compiler/include/priv/LutManager.h
        core/src/compiler/include/priv/Memory.h
        core/src/compiler/include/priv/MultiBatch.h
        core/src/compiler/include/priv/Network.h
        core/src/compiler/include/priv/Profile.h
        core/src/compiler/include/priv/Profiler.h
        core/src/compiler/include/priv/ResourceEnums.h
        core/src/compiler/include/priv/Setup.h
        core/src/compiler/include/priv/Surface.h
        core/src/compiler/include/priv/SurfaceEnums.h
        core/src/compiler/include/priv/TargetConfig.h
        core/src/compiler/include/priv/Tensor.h
        core/src/compiler/include/priv/TestPointParameter.h
        core/src/compiler/include/priv/TestPointParameterEnum.h
        core/src/compiler/include/priv/Type.h
        core/src/compiler/include/priv/WeightTranslationUnit.h
        core/src/compiler/include/priv/Wisdom.h
        core/src/compiler/include/priv/WisdomContainer.h
        core/src/compiler/AST.cpp
        core/src/compiler/CanonicalAST.cpp
        core/src/compiler/Check.cpp
        core/src/compiler/Compiler.cpp
        core/src/compiler/DLAInterface.cpp
        core/src/compiler/DLAInterfaceA.cpp
        core/src/compiler/DlaPrototestInterface.pb.cpp
        core/src/compiler/DLAResourceManager.cpp
        core/src/compiler/Layer.cpp
        core/src/compiler/LutManager.cpp
        core/src/compiler/Memory.cpp
        core/src/compiler/Network.cpp
        core/src/compiler/Profile.cpp
        core/src/compiler/Profiler.cpp
        core/src/compiler/Setup.cpp
        core/src/compiler/Surface.cpp
        core/src/compiler/TargetConfig.cpp
        core/src/compiler/Tensor.cpp
        core/src/compiler/TestPointParameter.cpp
        core/src/compiler/Wisdom.cpp
        core/src/compiler/WisdomContainer.cpp
        core/src/runtime/include/priv/Emulator.h
        core/src/runtime/include/priv/Runtime.h
        core/src/runtime/Emulator.cpp
        core/src/runtime/Runtime.cpp
        external/include/flatbuffers/flatbuffers.h
        external/include/rapidjson/error/en.h
        external/include/rapidjson/error/error.h
        external/include/rapidjson/internal/biginteger.h
        external/include/rapidjson/internal/diyfp.h
        external/include/rapidjson/internal/dtoa.h
        external/include/rapidjson/internal/ieee754.h
        external/include/rapidjson/internal/itoa.h
        external/include/rapidjson/internal/meta.h
        external/include/rapidjson/internal/pow10.h
        external/include/rapidjson/internal/regex.h
        external/include/rapidjson/internal/stack.h
        external/include/rapidjson/internal/strfunc.h
        external/include/rapidjson/internal/strtod.h
        external/include/rapidjson/internal/swap.h
        external/include/rapidjson/msinttypes/inttypes.h
        external/include/rapidjson/msinttypes/stdint.h
        external/include/rapidjson/allocators.h
        external/include/rapidjson/document.h
        external/include/rapidjson/encodedstream.h
        external/include/rapidjson/encodings.h
        external/include/rapidjson/filereadstream.h
        external/include/rapidjson/filewritestream.h
        external/include/rapidjson/fwd.h
        external/include/rapidjson/istreamwrapper.h
        external/include/rapidjson/memorybuffer.h
        external/include/rapidjson/memorystream.h
        external/include/rapidjson/ostreamwrapper.h
        external/include/rapidjson/pointer.h
        external/include/rapidjson/prettywriter.h
        external/include/rapidjson/rapidjson.h
        external/include/rapidjson/reader.h
        external/include/rapidjson/schema.h
        external/include/rapidjson/stream.h
        external/include/rapidjson/stringbuffer.h
        external/include/rapidjson/writer.h
        external/include/half.h
        external/include/jconfig.h
        external/include/jmorecfg.h
        external/include/jpeglib.h
        external/protobuf-2.6/android/config.h
        external/protobuf-2.6/examples/add_person.cc
        external/protobuf-2.6/examples/list_people.cc
        external/protobuf-2.6/gtest/codegear/gtest_all.cc
        external/protobuf-2.6/gtest/codegear/gtest_link.cc
        external/protobuf-2.6/gtest/fused-src/gtest/gtest-all.cc
        external/protobuf-2.6/gtest/fused-src/gtest/gtest.h
        external/protobuf-2.6/gtest/fused-src/gtest/gtest_main.cc
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-death-test-internal.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-filepath.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-internal.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-linked_ptr.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-param-util-generated.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-param-util.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-port.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-string.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-tuple.h
        external/protobuf-2.6/gtest/include/gtest/internal/gtest-type-util.h
        external/protobuf-2.6/gtest/include/gtest/gtest-death-test.h
        external/protobuf-2.6/gtest/include/gtest/gtest-message.h
        external/protobuf-2.6/gtest/include/gtest/gtest-param-test.h
        external/protobuf-2.6/gtest/include/gtest/gtest-spi.h
        external/protobuf-2.6/gtest/include/gtest/gtest-test-part.h
        external/protobuf-2.6/gtest/include/gtest/gtest-typed-test.h
        external/protobuf-2.6/gtest/include/gtest/gtest.h
        external/protobuf-2.6/gtest/include/gtest/gtest_pred_impl.h
        external/protobuf-2.6/gtest/include/gtest/gtest_prod.h
        external/protobuf-2.6/gtest/samples/prime_tables.h
        external/protobuf-2.6/gtest/samples/sample1.cc
        external/protobuf-2.6/gtest/samples/sample1.h
        external/protobuf-2.6/gtest/samples/sample10_unittest.cc
        external/protobuf-2.6/gtest/samples/sample1_unittest.cc
        external/protobuf-2.6/gtest/samples/sample2.cc
        external/protobuf-2.6/gtest/samples/sample2.h
        external/protobuf-2.6/gtest/samples/sample2_unittest.cc
        external/protobuf-2.6/gtest/samples/sample3-inl.h
        external/protobuf-2.6/gtest/samples/sample3_unittest.cc
        external/protobuf-2.6/gtest/samples/sample4.cc
        external/protobuf-2.6/gtest/samples/sample4.h
        external/protobuf-2.6/gtest/samples/sample4_unittest.cc
        external/protobuf-2.6/gtest/samples/sample5_unittest.cc
        external/protobuf-2.6/gtest/samples/sample6_unittest.cc
        external/protobuf-2.6/gtest/samples/sample7_unittest.cc
        external/protobuf-2.6/gtest/samples/sample8_unittest.cc
        external/protobuf-2.6/gtest/samples/sample9_unittest.cc
        external/protobuf-2.6/gtest/src/gtest-all.cc
        external/protobuf-2.6/gtest/src/gtest-death-test.cc
        external/protobuf-2.6/gtest/src/gtest-filepath.cc
        external/protobuf-2.6/gtest/src/gtest-internal-inl.h
        external/protobuf-2.6/gtest/src/gtest-port.cc
        external/protobuf-2.6/gtest/src/gtest-test-part.cc
        external/protobuf-2.6/gtest/src/gtest-typed-test.cc
        external/protobuf-2.6/gtest/src/gtest.cc
        external/protobuf-2.6/gtest/src/gtest_main.cc
        external/protobuf-2.6/gtest/test/gtest-death-test_test.cc
        external/protobuf-2.6/gtest/test/gtest-filepath_test.cc
        external/protobuf-2.6/gtest/test/gtest-linked_ptr_test.cc
        external/protobuf-2.6/gtest/test/gtest-listener_test.cc
        external/protobuf-2.6/gtest/test/gtest-message_test.cc
        external/protobuf-2.6/gtest/test/gtest-options_test.cc
        external/protobuf-2.6/gtest/test/gtest-param-test2_test.cc
        external/protobuf-2.6/gtest/test/gtest-param-test_test.cc
        external/protobuf-2.6/gtest/test/gtest-param-test_test.h
        external/protobuf-2.6/gtest/test/gtest-port_test.cc
        external/protobuf-2.6/gtest/test/gtest-test-part_test.cc
        external/protobuf-2.6/gtest/test/gtest-tuple_test.cc
        external/protobuf-2.6/gtest/test/gtest-typed-test2_test.cc
        external/protobuf-2.6/gtest/test/gtest-typed-test_test.cc
        external/protobuf-2.6/gtest/test/gtest-typed-test_test.h
        external/protobuf-2.6/gtest/test/gtest-unittest-api_test.cc
        external/protobuf-2.6/gtest/test/gtest_all_test.cc
        external/protobuf-2.6/gtest/test/gtest_break_on_failure_unittest_.cc
        external/protobuf-2.6/gtest/test/gtest_color_test_.cc
        external/protobuf-2.6/gtest/test/gtest_env_var_test_.cc
        external/protobuf-2.6/gtest/test/gtest_environment_test.cc
        external/protobuf-2.6/gtest/test/gtest_filter_unittest_.cc
        external/protobuf-2.6/gtest/test/gtest_help_test_.cc
        external/protobuf-2.6/gtest/test/gtest_list_tests_unittest_.cc
        external/protobuf-2.6/gtest/test/gtest_main_unittest.cc
        external/protobuf-2.6/gtest/test/gtest_no_test_unittest.cc
        external/protobuf-2.6/gtest/test/gtest_output_test_.cc
        external/protobuf-2.6/gtest/test/gtest_pred_impl_unittest.cc
        external/protobuf-2.6/gtest/test/gtest_prod_test.cc
        external/protobuf-2.6/gtest/test/gtest_repeat_test.cc
        external/protobuf-2.6/gtest/test/gtest_shuffle_test_.cc
        external/protobuf-2.6/gtest/test/gtest_sole_header_test.cc
        external/protobuf-2.6/gtest/test/gtest_stress_test.cc
        external/protobuf-2.6/gtest/test/gtest_throw_on_failure_ex_test.cc
        external/protobuf-2.6/gtest/test/gtest_throw_on_failure_test_.cc
        external/protobuf-2.6/gtest/test/gtest_uninitialized_test_.cc
        external/protobuf-2.6/gtest/test/gtest_unittest.cc
        external/protobuf-2.6/gtest/test/gtest_xml_outfile1_test_.cc
        external/protobuf-2.6/gtest/test/gtest_xml_outfile2_test_.cc
        external/protobuf-2.6/gtest/test/gtest_xml_output_unittest_.cc
        external/protobuf-2.6/gtest/test/production.cc
        external/protobuf-2.6/gtest/test/production.h
        external/protobuf-2.6/gtest/xcode/Samples/FrameworkSample/widget.cc
        external/protobuf-2.6/gtest/xcode/Samples/FrameworkSample/widget.h
        external/protobuf-2.6/gtest/xcode/Samples/FrameworkSample/widget_test.cc
        external/protobuf-2.6/python/google/protobuf/internal/api_implementation.cc
        external/protobuf-2.6/python/google/protobuf/pyext/descriptor.cc
        external/protobuf-2.6/python/google/protobuf/pyext/descriptor.h
        external/protobuf-2.6/python/google/protobuf/pyext/extension_dict.cc
        external/protobuf-2.6/python/google/protobuf/pyext/extension_dict.h
        external/protobuf-2.6/python/google/protobuf/pyext/message.cc
        external/protobuf-2.6/python/google/protobuf/pyext/message.h
        external/protobuf-2.6/python/google/protobuf/pyext/python_protobuf.h
        external/protobuf-2.6/python/google/protobuf/pyext/repeated_composite_container.cc
        external/protobuf-2.6/python/google/protobuf/pyext/repeated_composite_container.h
        external/protobuf-2.6/python/google/protobuf/pyext/repeated_scalar_container.cc
        external/protobuf-2.6/python/google/protobuf/pyext/repeated_scalar_container.h
        external/protobuf-2.6/python/google/protobuf/pyext/scoped_pyobject_ptr.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_bootstrap_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_enum.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_enum.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_enum_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_enum_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_extension.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_extension.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_file.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_file.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_helpers.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_helpers.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_message.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_message.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_message_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_message_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_options.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_plugin_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_primitive_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_primitive_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_service.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_service.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_string_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_string_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/cpp/cpp_unittest.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_context.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_context.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_doc_comment.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_doc_comment.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_doc_comment_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_enum.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_enum.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_enum_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_enum_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_extension.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_extension.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_file.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_file.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_generator_factory.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_generator_factory.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_helpers.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_helpers.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_lazy_message_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_lazy_message_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_message.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_message.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_message_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_message_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_name_resolver.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_name_resolver.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_plugin_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_primitive_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_primitive_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_service.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_service.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_shared_code_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_shared_code_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_string_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/java/java_string_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_enum.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_enum.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_enum_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_enum_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_file.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_file.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_helpers.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_helpers.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_message.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_message.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_message_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_message_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_params.h
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_primitive_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javamicro/javamicro_primitive_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_enum.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_enum.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_enum_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_enum_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_extension.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_extension.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_file.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_file.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_helpers.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_helpers.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_message.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_message.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_message_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_message_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_params.h
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_primitive_field.cc
        external/protobuf-2.6/src/google/protobuf/compiler/javanano/javanano_primitive_field.h
        external/protobuf-2.6/src/google/protobuf/compiler/python/python_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/python/python_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/python/python_plugin_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/code_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/code_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/command_line_interface.cc
        external/protobuf-2.6/src/google/protobuf/compiler/command_line_interface.h
        external/protobuf-2.6/src/google/protobuf/compiler/command_line_interface_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/importer.cc
        external/protobuf-2.6/src/google/protobuf/compiler/importer.h
        external/protobuf-2.6/src/google/protobuf/compiler/importer_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/main.cc
        external/protobuf-2.6/src/google/protobuf/compiler/mock_code_generator.cc
        external/protobuf-2.6/src/google/protobuf/compiler/mock_code_generator.h
        external/protobuf-2.6/src/google/protobuf/compiler/package_info.h
        external/protobuf-2.6/src/google/protobuf/compiler/parser.cc
        external/protobuf-2.6/src/google/protobuf/compiler/parser.h
        external/protobuf-2.6/src/google/protobuf/compiler/parser_unittest.cc
        external/protobuf-2.6/src/google/protobuf/compiler/plugin.cc
        external/protobuf-2.6/src/google/protobuf/compiler/plugin.h
        external/protobuf-2.6/src/google/protobuf/compiler/plugin.pb.cc
        external/protobuf-2.6/src/google/protobuf/compiler/plugin.pb.h
        external/protobuf-2.6/src/google/protobuf/compiler/subprocess.cc
        external/protobuf-2.6/src/google/protobuf/compiler/subprocess.h
        external/protobuf-2.6/src/google/protobuf/compiler/test_plugin.cc
        external/protobuf-2.6/src/google/protobuf/compiler/zip_writer.cc
        external/protobuf-2.6/src/google/protobuf/compiler/zip_writer.h
        external/protobuf-2.6/src/google/protobuf/io/coded_stream.cc
        external/protobuf-2.6/src/google/protobuf/io/coded_stream.h
        external/protobuf-2.6/src/google/protobuf/io/coded_stream_inl.h
        external/protobuf-2.6/src/google/protobuf/io/coded_stream_unittest.cc
        external/protobuf-2.6/src/google/protobuf/io/gzip_stream.cc
        external/protobuf-2.6/src/google/protobuf/io/gzip_stream.h
        external/protobuf-2.6/src/google/protobuf/io/package_info.h
        external/protobuf-2.6/src/google/protobuf/io/printer.cc
        external/protobuf-2.6/src/google/protobuf/io/printer.h
        external/protobuf-2.6/src/google/protobuf/io/printer_unittest.cc
        external/protobuf-2.6/src/google/protobuf/io/strtod.cc
        external/protobuf-2.6/src/google/protobuf/io/strtod.h
        external/protobuf-2.6/src/google/protobuf/io/tokenizer.cc
        external/protobuf-2.6/src/google/protobuf/io/tokenizer.h
        external/protobuf-2.6/src/google/protobuf/io/tokenizer_unittest.cc
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream.cc
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream.h
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream_impl.cc
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream_impl.h
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream_impl_lite.cc
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream_impl_lite.h
        external/protobuf-2.6/src/google/protobuf/io/zero_copy_stream_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_arm64_gcc.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_arm_gcc.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_arm_qnx.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_atomicword_compat.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_generic_gcc.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_macosx.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_mips_gcc.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_pnacl.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_solaris.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_tsan.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_x86_gcc.cc
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_x86_gcc.h
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_x86_msvc.cc
        external/protobuf-2.6/src/google/protobuf/stubs/atomicops_internals_x86_msvc.h
        external/protobuf-2.6/src/google/protobuf/stubs/common.cc
        external/protobuf-2.6/src/google/protobuf/stubs/common.h
        external/protobuf-2.6/src/google/protobuf/stubs/common_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/hash.cc
        external/protobuf-2.6/src/google/protobuf/stubs/hash.h
        external/protobuf-2.6/src/google/protobuf/stubs/map-util.h
        external/protobuf-2.6/src/google/protobuf/stubs/map_util.h
        external/protobuf-2.6/src/google/protobuf/stubs/once.cc
        external/protobuf-2.6/src/google/protobuf/stubs/once.h
        external/protobuf-2.6/src/google/protobuf/stubs/once_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/platform_macros.h
        external/protobuf-2.6/src/google/protobuf/stubs/shared_ptr.h
        external/protobuf-2.6/src/google/protobuf/stubs/stl_util-inl.h
        external/protobuf-2.6/src/google/protobuf/stubs/stl_util.h
        external/protobuf-2.6/src/google/protobuf/stubs/stringprintf.cc
        external/protobuf-2.6/src/google/protobuf/stubs/stringprintf.h
        external/protobuf-2.6/src/google/protobuf/stubs/stringprintf_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/structurally_valid.cc
        external/protobuf-2.6/src/google/protobuf/stubs/structurally_valid_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/strutil.cc
        external/protobuf-2.6/src/google/protobuf/stubs/strutil.h
        external/protobuf-2.6/src/google/protobuf/stubs/strutil_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/substitute.cc
        external/protobuf-2.6/src/google/protobuf/stubs/substitute.h
        external/protobuf-2.6/src/google/protobuf/stubs/template_util.h
        external/protobuf-2.6/src/google/protobuf/stubs/template_util_unittest.cc
        external/protobuf-2.6/src/google/protobuf/stubs/type_traits.h
        external/protobuf-2.6/src/google/protobuf/stubs/type_traits_unittest.cc
        external/protobuf-2.6/src/google/protobuf/testing/file.cc
        external/protobuf-2.6/src/google/protobuf/testing/file.h
        external/protobuf-2.6/src/google/protobuf/testing/googletest.cc
        external/protobuf-2.6/src/google/protobuf/testing/googletest.h
        external/protobuf-2.6/src/google/protobuf/testing/zcgunzip.cc
        external/protobuf-2.6/src/google/protobuf/testing/zcgzip.cc
        external/protobuf-2.6/src/google/protobuf/descriptor.cc
        external/protobuf-2.6/src/google/protobuf/descriptor.h
        external/protobuf-2.6/src/google/protobuf/descriptor.pb.cc
        external/protobuf-2.6/src/google/protobuf/descriptor.pb.h
        external/protobuf-2.6/src/google/protobuf/descriptor_database.cc
        external/protobuf-2.6/src/google/protobuf/descriptor_database.h
        external/protobuf-2.6/src/google/protobuf/descriptor_database_unittest.cc
        external/protobuf-2.6/src/google/protobuf/descriptor_unittest.cc
        external/protobuf-2.6/src/google/protobuf/dynamic_message.cc
        external/protobuf-2.6/src/google/protobuf/dynamic_message.h
        external/protobuf-2.6/src/google/protobuf/dynamic_message_unittest.cc
        external/protobuf-2.6/src/google/protobuf/extension_set.cc
        external/protobuf-2.6/src/google/protobuf/extension_set.h
        external/protobuf-2.6/src/google/protobuf/extension_set_heavy.cc
        external/protobuf-2.6/src/google/protobuf/extension_set_unittest.cc
        external/protobuf-2.6/src/google/protobuf/generated_enum_reflection.h
        external/protobuf-2.6/src/google/protobuf/generated_message_reflection.cc
        external/protobuf-2.6/src/google/protobuf/generated_message_reflection.h
        external/protobuf-2.6/src/google/protobuf/generated_message_reflection_unittest.cc
        external/protobuf-2.6/src/google/protobuf/generated_message_util.cc
        external/protobuf-2.6/src/google/protobuf/generated_message_util.h
        external/protobuf-2.6/src/google/protobuf/lite_unittest.cc
        external/protobuf-2.6/src/google/protobuf/message.cc
        external/protobuf-2.6/src/google/protobuf/message.h
        external/protobuf-2.6/src/google/protobuf/message_lite.cc
        external/protobuf-2.6/src/google/protobuf/message_lite.h
        external/protobuf-2.6/src/google/protobuf/message_unittest.cc
        external/protobuf-2.6/src/google/protobuf/package_info.h
        external/protobuf-2.6/src/google/protobuf/reflection_ops.cc
        external/protobuf-2.6/src/google/protobuf/reflection_ops.h
        external/protobuf-2.6/src/google/protobuf/reflection_ops_unittest.cc
        external/protobuf-2.6/src/google/protobuf/repeated_field.cc
        external/protobuf-2.6/src/google/protobuf/repeated_field.h
        external/protobuf-2.6/src/google/protobuf/repeated_field_reflection_unittest.cc
        external/protobuf-2.6/src/google/protobuf/repeated_field_unittest.cc
        external/protobuf-2.6/src/google/protobuf/service.cc
        external/protobuf-2.6/src/google/protobuf/service.h
        external/protobuf-2.6/src/google/protobuf/test_util.cc
        external/protobuf-2.6/src/google/protobuf/test_util.h
        external/protobuf-2.6/src/google/protobuf/test_util_lite.cc
        external/protobuf-2.6/src/google/protobuf/test_util_lite.h
        external/protobuf-2.6/src/google/protobuf/text_format.cc
        external/protobuf-2.6/src/google/protobuf/text_format.h
        external/protobuf-2.6/src/google/protobuf/text_format_unittest.cc
        external/protobuf-2.6/src/google/protobuf/unknown_field_set.cc
        external/protobuf-2.6/src/google/protobuf/unknown_field_set.h
        external/protobuf-2.6/src/google/protobuf/unknown_field_set_unittest.cc
        external/protobuf-2.6/src/google/protobuf/wire_format.cc
        external/protobuf-2.6/src/google/protobuf/wire_format.h
        external/protobuf-2.6/src/google/protobuf/wire_format_lite.cc
        external/protobuf-2.6/src/google/protobuf/wire_format_lite.h
        external/protobuf-2.6/src/google/protobuf/wire_format_lite_inl.h
        external/protobuf-2.6/src/google/protobuf/wire_format_unittest.cc
        port/linux/include/drm.h
        port/linux/include/drm_mode.h
        port/linux/include/nvdla.h
        port/linux/include/nvdla_ioctl.h
        port/linux/nvdla.c
        port/linux/nvdla_os.c
        utils/BitBinaryTree.c
        utils/BuddyAlloc.c
        utils/ErrorLogging.c)
